# rust-playground

./: README.md
encrypted-text/: .gitignore  Cargo.toml
encrypted-text/src/: main.rs
fcgi-app/: Cargo.toml  README.md
fcgi-app/src/: main.rs
fcgi-hello/: Cargo.toml  README.md
fcgi-hello/src/: main.rs
fcgi-hyper/: Cargo.toml  README.md
fcgi-hyper/src/: main.rs
fcgi-tokio/: Cargo.toml  README.md
fcgi-tokio/src/: main.rs
opencl-simple-benchmark/: Cargo.toml  README.md  benchmark.cc
opencl-simple-benchmark/src/: main.rs
sse-server/: Cargo.toml  README.md
sse-server/src/: main.rs
uefi-hello-world/: Cargo.toml  README.md
unix-socket/: Cargo.toml  README.md
unix-socket/src/: lib.rs
ws-relay/: Cargo.toml  README.md
ws-relay/src/: main.rs
