[package]
name = "fcgi-hyper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio-fastcgi = "1.3.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.2.0", features = ["server", "http1"] }
http = "1.0"
http-body-util = "0.1.0"
bytes = "1.5"
futures-util = "0.3"
log = "0.4"
env_logger = "0.10"
hyper-util = { version = "0.1.3", features = ["full"] }